# UAVros

./: .gitignore  LICENSE  README.md  common ros command  compile_all.sh  compile_artaglanding.sh  compile_artaglanding_sitl.sh  compile_experiment.sh  compile_kcffollow_simulation.sh  compile_multi_gimbal_sitl.sh  compile_uavugv_sitl.sh  compile_wrzf.sh  compile_wrzf_2021_sitl.sh  compile_wrzf_sitl.sh  ros_dependencies
Prometheus_control/control/src/: px4_pos_controller.cpp
ar_track_alvar/: .gitignore
camera_calibrate/: ar_track_camera_tx2.launch  cam29mm110deg.yaml  camera_launch.launch  mylaptop_cam.yaml
car_video/: CMakeLists.txt  package.xml
car_video/scripts/: car_tracking.py  car_tracking_sitl.py  cir2.py  cir2_sitl.py  main.py  main_.py
car_video/scripts/detecting/: __init__.py  detect_car.py  tools.py
dependenct_packages/amov_gimbal_sdk_ros/: CMakeLists.txt  README.md  package.xml
dependenct_packages/amov_gimbal_sdk_ros/msg/: GimbalControl.msg  GimbalState.msg
dependenct_packages/amov_gimbal_sdk_ros/srv/: CameraControl.srv
firmaware/v1.11.0dev-spx/: px4_fmu-v5_default.px4  readme.txt
firmaware/v1.11.3/: px4_fmu-v5_default.px4  readme.md
firmaware/v1.11.3-spx/: px4_fmu-v5_default.px4  readme.txt
firmaware/v1.11.3-spx-v2/: p200_210514_spx.params  px4_fmu-v5_default.px4  readme.txt
legacy/Prometheus_control/control/: CMakeLists.txt
legacy/camera_calibrate/: cam90deg.yaml  cam90deg2.yaml  camera_launch.launch
legacy/ste5_proto/: CMakeLists.txt  README.md  package.xml
legacy/ste5_proto/msg/: TrackState.msg
legacy/ste5_proto/script/: .STE5proto.py.swp  .tx2-can-main.py.swp  STE5proto.py  tx2-can-main.py
legacy/volans_control/: README.md
legacy/volans_control/include/: offboard_control.h  px4_control_cfg.h
px4log/0112/: log_0_2021-1-10-05-15-10.ulg  log_1_2021-1-10-05-18-36.ulg  log_2_2021-1-10-05-30-40.ulg  log_3_2021-1-10-05-32-12.ulg
ste5_proto/script/: main_without_ros.py
uavros_experiment/: README.md
uavros_experiment/ARtagLanding/: CMakeLists.txt  README.md  package.xml  ros relies
uavros_experiment/ARtagLanding/include/: landing_control_p200.h  offboard_control.h
uavros_experiment/ARtagLanding/launch/: ar_track_camera_tx2.launch  camera_ARtrack.launch  landing_pid.launch  p200_precision_landing(tx2_backup).sh  p200_precision_landing.launch  p200_precision_landing.sh  rviz_p200_config.rviz
uavros_experiment/ARtagLanding/src/: landing_control_p200.cpp
uavros_experiment/KCFfollow/: object_tracking.cpp  object_tracking.yaml
uavros_experiment/uavros_uavugv/: CMakeLists.txt  package.xml
uavros_experiment/uavros_uavugv/config/: plot_uavugv.xml  rviz_multi.rviz  rviz_uavugv.rviz  rviz_ugv.rviz
uavros_experiment/uavros_uavugv/include/: ackerman_controller.h  uav_controller.h
uavros_experiment/uavros_uavugv/launch/: double_ugv.launch  uavugv_sitl.launch
uavros_experiment/uavros_uavugv/src/: leader_estimator.cpp  uav_controller_node.cpp
uavros_msgs/: CMakeLists.txt  package.xml
uavros_msgs/GimbalMsgTest/: CMakeLists.txt  package.xml
uavros_msgs/GimbalMsgTest/msg/: trackingState.msg
uavros_msgs/GimbalMsgTest/script/: STE5proto.py  tx2-can-main.py
uavros_msgs/msg/: KcfDetectioninfo.msg
uavros_simulation/ARtagLanding_sitl/: CMakeLists.txt  package.xml  ros relies
uavros_simulation/ARtagLanding_sitl/config/: cam29mm_tx2.yaml  rviz_single.rviz
uavros_simulation/ARtagLanding_sitl/include/: landing_control_p200.h  landing_service.h  offboard_control.h
uavros_simulation/ARtagLanding_sitl/launch/: ar_track_camera_sitl.launch  ar_track_camera_tx2.launch  camera_launch.launch  roverLanding_sitl.launch  singleLanding_service_sitl.launch  singleLanding_sitl.launch
uavros_simulation/ARtagLanding_sitl/src/: landing_control_p200.cpp  landing_service.cpp
uavros_simulation/kcffollow_simulation/: CMakeLists.txt  README.md  package.xml  ros relies
uavros_simulation/kcffollow_simulation/config/: camera_param.yaml  camera_param_simulation.yaml  head_camera.yaml
uavros_simulation/kcffollow_simulation/include/: kcf_control_p200 (copy).h  kcf_control_p200.h  px4_control_cfg.h
uavros_simulation/kcffollow_simulation/launch/: KCF_track.launch  kcf_camera.launch  kcf_detection_node.launch  kcf_tracking_pid.launch  test.launch
uavros_simulation/kcffollow_simulation/py_nodes/: kcf_detection_node.py  kcftracker.py  keyboard_control_px4.py  run_backup.py
uavros_simulation/kcffollow_simulation/src/: kcf_control_p200 (copy).cpp  kcf_control_p200.cpp  notion
uavros_simulation/uavros_gazebo/: CMakeLists.txt  package.xml  ros_depend.md
uavros_simulation/uavros_gazebo/launch/: camera_down_px4.launch  gimbal_forward_test.launch  mavros_gazebo_px4_sitl.launch  mavros_px4.launch  multi_uav_mavros_sitl.launch  px4_gazebo_sitl.launch  single_iris_usbcam_down.launch  single_solo_gimbal.launch  single_vehicle_spawn.launch  solo_gimbal_test.launch  test_world.launch
uavros_simulation/uavros_gazebo/px4_modification/: gazebo_gimbal_controller_plugin.cpp
uavros_simulation/uavros_gazebo/py_nodes/: gazebo_modelpos_publisher.py  (+1 more)
uavros_simulation/uavros_multi_gimbal_sitl/: CMakeLists.txt  package.xml
uavros_simulation/uavros_uavugv_sitl/: CMakeLists.txt  package.xml
uavros_simulation/uavros_wrzf_sitl/: CMakeLists.txt  package.xml
(+164 files in other folders)
